up source của RAG 6 - luồng QDant trên OpenWebUI

--- a/note/note1.1_.ipynb
+++ b/note/note1.1_.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Đóng Dockerfile và docker-compose.yml cho source frontend cũ để deploy port 30001"
+    "# Step 1. Cursor Compose - Đóng Dockerfile và docker-compose.yml cho source frontend cũ để deploy port 30001"
    ]
   }
  ],
