--- a/reference/RAG3_frontend/back-end/SERVER_v2.3_Done_fixRetrieval.ipynb
+++ b/reference/RAG3_frontend/back-end/SERVER_v2.3_Done_fixRetrieval.ipynb
@@ -1185,7 +1185,7 @@
         "from fastapi import FastAPI, HTTPException\n",
         "\n",
         "# Định nghĩa các nguồn dữ liệu hợp lệ cho hệ thống RAG\n",
-        "VALID_SOURCES = [\"nttu\", \"wiki\"]\n",
+        "VALID_SOURCES = [\"RAG\", \"wiki\"]\n",
         "\n",
         "# Cấu hình CORS cho phép truy cập từ các domain khác\n",
         "origins = [\"*\"]\n",
@@ -1215,7 +1215,7 @@
         "    Endpoint xử lý truy vấn RAG với nguồn dữ liệu được chỉ định\n",
         "    \n",
         "    Args:\n",
-        "        source (str): Nguồn dữ liệu (nttu hoặc wiki)\n",
+        "        source (str): Nguồn dữ liệu (RAG hoặc wiki)\n",
         "        q (str, optional): Câu truy vấn từ người dùng\n",
         "    \n",
         "    Returns:\n",
@@ -1492,12 +1492,12 @@
         "# client = QdrantClient(url=QDRANT_URL, api_key=QDRANT_API_KEY)\n",
         "\n",
         "# # Lấy thông tin collection\n",
-        "# collection_info = client.get_collection(\"nttu_sotay_vector_db_v1\")\n",
+        "# collection_info = client.get_collection(\"RAG_sotay_vector_db_v1\")\n",
         "# print(\"Collection info:\", collection_info)\n",
         "\n",
         "# # Lấy một số points để kiểm tra\n",
         "# points = client.scroll(\n",
-        "#     collection_name=\"nttu_sotay_vector_db_v1\",\n",
+        "#     collection_name=\"RAG_sotay_vector_db_v1\",\n",
         "#     limit=2  # Lấy 2 điểm đầu tiên\n",
         "# )\n",
         "# for point in points[0]:\n",
@@ -1519,7 +1519,7 @@
         "\n",
         "# # Tìm kiếm trong collection\n",
         "# search_results = client.search(\n",
-        "#     collection_name=\"nttu_sotay_vector_db_v1\",\n",
+        "#     collection_name=\"RAG_sotay_vector_db_v1\",\n",
         "#     query_vector=query_vector,\n",
         "#     limit=5  # Số lượng kết quả muốn lấy\n",
         "# )\n",
@@ -2306,7 +2306,7 @@
         "from fastapi import FastAPI, HTTPException\n",
         "\n",
         "# Định nghĩa các nguồn dữ liệu hợp lệ cho hệ thống RAG\n",
-        "VALID_SOURCES = [\"nttu\", \"wiki\"]\n",
+        "VALID_SOURCES = [\"RAG\", \"wiki\"]\n",
         "\n",
         "# Cấu hình CORS cho phép truy cập từ các domain khác\n",
         "origins = [\"*\"]\n",
@@ -2336,7 +2336,7 @@
         "    Endpoint xử lý truy vấn RAG với nguồn dữ liệu được chỉ định\n",
         "    \n",
         "    Args:\n",
-        "        source (str): Nguồn dữ liệu (nttu hoặc wiki)\n",
+        "        source (str): Nguồn dữ liệu (RAG hoặc wiki)\n",
         "        q (str, optional): Câu truy vấn từ người dùng\n",
         "    \n",
         "    Returns:\n",
@@ -2639,12 +2639,12 @@
         "# client = QdrantClient(url=QDRANT_URL, api_key=QDRANT_API_KEY)\n",
         "\n",
         "# # Lấy thông tin collection\n",
-        "# collection_info = client.get_collection(\"nttu_sotay_vector_db_v1\")\n",
+        "# collection_info = client.get_collection(\"RAG_sotay_vector_db_v1\")\n",
         "# print(\"Collection info:\", collection_info)\n",
         "\n",
         "# # Lấy một số points để kiểm tra\n",
         "# points = client.scroll(\n",
-        "#     collection_name=\"nttu_sotay_vector_db_v1\",\n",
+        "#     collection_name=\"RAG_sotay_vector_db_v1\",\n",
         "#     limit=2  # Lấy 2 điểm đầu tiên\n",
         "# )\n",
         "# for point in points[0]:\n",
@@ -2668,7 +2668,7 @@
         "\n",
         "# # Tìm kiếm trong collection\n",
         "# search_results = client.search(\n",
-        "#     collection_name=\"nttu_sotay_vector_db_v1\",\n",
+        "#     collection_name=\"RAG_sotay_vector_db_v1\",\n",
         "#     query_vector=query_vector,\n",
         "#     limit=5  # Số lượng kết quả muốn lấy\n",
         "# )\n",
