Fix UI, UX theo Client: ĐẶC BIỆT LÀ DARKMODE XỊN XÒ NHỜ CURSOR KO NGỜ ĐẾN + Chỉnh vị trí của gợi ý câu hỏi, chỉnh từ ngữ, ...

--- a/note/note1.1_.ipynb
+++ b/note/note1.1_.ipynb
@@ -331,6 +331,30 @@
     "\n",
     "These changes will ensure the frontend properly connects to our containerized backend service and handles the responses correctly.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 5: Fix lỗi connect backend với frontend -- mệt muón ngất - 2h-3h để fix lỗi này"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 6: Chỉnh UI, UX: \n",
+    "1. Thêm 1 dark mode\n",
+    "- oke đó, dark mode tác động vào cả bên trong nữa đi \n",
+    "- Để 3 câu hỏi tham khảo cho lần hỏi đầu tiên, và kéo dài thanh chat ra đi \n",
+    "---\n",
+    "Thêm Darkmode mé, xịn xò vãi chưởng"
+   ]
   }
  ],
  "metadata": {
