prepare TÀI NGUYÊN TRIỂN KHAI TẦM BAO NHIÊU + PHẦN LOGIN MỤC TIÊU LÀ GÌ

--- a/note/note1.3_TrienSupabase.ipynb
+++ b/note/note1.3_TrienSupabase.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Tôi thấy là: cứ triển phần log in cho bảo mật (ae nào muốn thì có nút tạo tài khoản xong đăng nhập) + Con Bot thì vẫn trả lời theo hướng thân thiện lịch sự, kèm 1 chút phong cách của user. \n",
+    "\n",
+    "Còn về lâu dài nó theo phong cách user, hoặc là có memory nhớ được thông tin user thì chưa bàn đến bro ạ. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "OKE, NÓI TÔI CÁCH BẠN SẼ LÀM TRƯỚC RỒI SẼ LÀM SAU NHA?\n",
     "ĐẶT CÁC CÂU HỎI VÀ TỰ TRẢ LỜI "
    ]
