documents and requirements for preprare Local

--- a/note/LocalModel/.md
+++ b/note/LocalModel/.md
@@ -6,3 +6,280 @@ Khuyến nghị cuối cùng
 2. Cho LLM 3B-7B:
 - Cho thiết bị cấu hình thấp/trung bình: Llama-3.2-3B-Instruct-Frog – tối ưu cho RAG tiếng Việt và có thể chạy trên nhiều loại thiết bị
 - Cho hiệu suất cao hơn: PhoGPT-7.5B hoặc Vi-Qwen2-7B-RAG nếu bạn có đủ tài nguyên phần cứng
+
+---
+https://www.genspark.ai/agents?id=24eb6e6a-3d63-4eec-8cc8-198e59552223
+---
+
+# KHUYẾN NGHỊ CUỐI CÙNG CHO HỆ THỐNG RAG TIẾNG VIỆT
+
+## CẤU HÌNH MÁY CHO EMBEDDING VÀ LLM
+
+### 1. CẤU HÌNH TỐI THIỂU ĐỂ CHẠY CẢ EMBEDDING VÀ LLAMA-3.2-3B-INSTRUCT
+
+```
+🔹 CPU: Intel Core i5 thế hệ 10 trở lên / AMD Ryzen 5 3000 series trở lên
+🔹 RAM: 16GB
+🔹 GPU: NVIDIA GPU với ít nhất 6GB VRAM (như GTX 1660 Ti trở lên)
+🔹 Ổ cứng: SSD 20GB trống
+🔹 Hệ điều hành: Windows 10/11 64-bit, Ubuntu 20.04 trở lên
+```
+
+### 2. CẤU HÌNH ĐỀ XUẤT CHO HIỆU SUẤT TỐT
+
+```
+🔹 CPU: Intel Core i7/i9 thế hệ 11 trở lên / AMD Ryzen 7/9 5000 series trở lên
+🔹 RAM: 32GB
+🔹 GPU: NVIDIA RTX 3060 (8GB VRAM) trở lên
+🔹 Ổ cứng: NVMe SSD với ít nhất 50GB trống
+🔹 Hệ điều hành: Windows 10/11 64-bit, Ubuntu 20.04 trở lên
+```
+
+### 3. YÊU CẦU RIÊNG CHO TỪNG THÀNH PHẦN
+
+| Mô hình | CPU | RAM | GPU | Ổ cứng | Ghi chú |
+|---------|-----|-----|-----|---------|---------|
+| **AITeamVN/Vietnamese_Embedding** | Core i5/Ryzen 5 | 4-8GB | Không bắt buộc | 500MB | Có thể chạy CPU-only |
+| **Llama-3.2-3B-Instruct-Frog** | Core i7/Ryzen 7 | 8-16GB | 6GB VRAM | 10GB | Tối ưu hiệu suất với GPU |
+
+## LỢI ÍCH KHI SỬ DỤNG CÁC MÔ HÌNH ĐỀ XUẤT
+
+### AITeamVN/Vietnamese_Embedding
+
+- **Hiệu suất**: Vượt trội trong việc hiểu ngữ nghĩa tiếng Việt
+- **Tài nguyên**: Nhẹ hơn các mô hình đa ngôn ngữ (768 chiều thay vì 1024)
+- **Định lượng**: Được tinh chỉnh cho mục đích RAG tiếng Việt
+
+### Llama-3.2-3B-Instruct-Frog
+
+- **Cân bằng**: Đạt cân bằng tốt giữa kích thước và hiệu suất
+- **Ngữ cảnh**: Có thể xử lý ngữ cảnh dài cho RAG
+- **Tối ưu hóa**: Phiên bản GGUF được tối ưu cho CPU và GPU yêu cầu thấp
+
+## HƯỚNG DẪN TRIỂN KHAI TỐI ƯU
+
+### 1. Thiết lập môi trường
+
+```bash
+# Tạo môi trường conda
+conda create -n rag_env python=3.10
+conda activate rag_env
+
+# Cài đặt thư viện cần thiết
+pip install sentence-transformers torch langchain qdrant_client llama-cpp-python uvicorn fastapi
+```
+
+### 2. Tải và cài đặt mô hình embedding
+
+```python
+from sentence_transformers import SentenceTransformer
+
+# Tạo thư mục lưu mô hình
+import os
+os.makedirs("models/embedding", exist_ok=True)
+
+# Tải mô hình Vietnamese_Embedding
+model = SentenceTransformer("AITeamVN/Vietnamese_Embedding", cache_folder="models/embedding")
+
+# Kiểm tra
+test_embedding = model.encode("Kiểm tra mô hình embedding tiếng Việt")
+print(f"Kích thước vector: {len(test_embedding)}")
+```
+
+### 3. Cài đặt mô hình LLM 3B
+
+```bash
+# Tải mô hình GGUF đã được tối ưu
+mkdir -p models/llm
+wget -O models/llm/llama-3.2-3B-instruct-frog-Q5_K_M.gguf https://huggingface.co/TheBloke/Llama-3.2-3B-Instruct-GGUF/resolve/main/llama-3.2-3b-instruct.Q5_K_M.gguf
+```
+
+### 4. Thiết lập dịch vụ embedding
+
+```python
+# embedding_service.py
+from fastapi import FastAPI, HTTPException
+from pydantic import BaseModel
+from typing import List, Union
+from sentence_transformers import SentenceTransformer
+import uvicorn
+
+app = FastAPI()
+model_path = "AITeamVN/Vietnamese_Embedding"
+cache_dir = "models/embedding"
+
+# Khởi tạo mô hình
+model = SentenceTransformer(model_path, cache_folder=cache_dir)
+
+class EmbeddingRequest(BaseModel):
+    texts: Union[str, List[str]]
+
+@app.post("/embed")
+def create_embedding(request: EmbeddingRequest):
+    try:
+        texts = request.texts if isinstance(request.texts, list) else [request.texts]
+        embeddings = model.encode(texts)
+        return {"embeddings": embeddings.tolist()}
+    except Exception as e:
+        raise HTTPException(status_code=500, detail=str(e))
+
+if __name__ == "__main__":
+    uvicorn.run("embedding_service:app", host="0.0.0.0", port=8001)
+```
+
+### 5. Thiết lập dịch vụ LLM
+
+```python
+# llm_service.py
+from fastapi import FastAPI, HTTPException
+from pydantic import BaseModel
+from typing import List
+import uvicorn
+from llama_cpp import Llama
+
+app = FastAPI()
+model_path = "models/llm/llama-3.2-3B-instruct-frog-Q5_K_M.gguf"
+
+# Khởi tạo mô hình với tối ưu hóa cho GPU
+model = Llama(
+    model_path=model_path,
+    n_ctx=4096,  # Ngữ cảnh dài cho RAG
+    n_gpu_layers=-1,  # Tự động dùng hết GPU layers
+    n_threads=4  # Điều chỉnh theo số lõi CPU
+)
+
+class GenerationRequest(BaseModel):
+    prompt: str
+    max_tokens: int = 1024
+    temperature: float = 0.7
+
+@app.post("/generate")
+def generate_text(request: GenerationRequest):
+    try:
+        output = model.create_completion(
+            request.prompt, 
+            max_tokens=request.max_tokens,
+            temperature=request.temperature
+        )
+        return {"generated_text": output["choices"][0]["text"]}
+    except Exception as e:
+        raise HTTPException(status_code=500, detail=str(e))
+
+if __name__ == "__main__":
+    uvicorn.run("llm_service:app", host="0.0.0.0", port=8002)
+```
+
+### 6. Docker Compose để Điều phối các Dịch vụ
+
+```yaml
+version: '3'
+
+services:
+  embedding:
+    build: 
+      context: ./embedding
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8001"
+    volumes:
+      - ./models/embedding:/app/models/embedding
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 4G
+
+  llm:
+    build:
+      context: ./llm
+      dockerfile: Dockerfile
+    ports:
+      - "8002:8002"
+    volumes:
+      - ./models/llm:/app/models/llm
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 12G
+    environment:
+      - CUDA_VISIBLE_DEVICES=0
+
+  rag-backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    depends_on:
+      - embedding
+      - llm
+    environment:
+      - EMBEDDING_URL=http://embedding:8001
+      - LLM_URL=http://llm:8002
+
+  qdrant:
+    image: qdrant/qdrant:latest
+    ports:
+      - "6333:6333"
+    volumes:
+      - ./data/qdrant:/qdrant/storage
+```
+
+## TIP BỔ SUNG
+
+### 1. Tối ưu hóa với GPU hạn chế (4-6GB VRAM)
+
+```python
+# Sử dụng bộ nhớ nửa chính xác
+model = Llama(
+    model_path=model_path,
+    n_gpu_layers=-1,
+    n_threads=4,
+    n_batch=512,  # Giảm kích thước batch
+    f16_kv=True,  # Sử dụng bộ nhớ nửa chính xác cho KV cache
+    use_mlock=False
+)
+```
+
+### 2. Lưu trữ mô hình trên ổ đĩa chậm (HDD)
+
+Cách tổ chức dữ liệu để tăng hiệu suất:
+- Tạo bộ nhớ đệm trên RAM hoặc SSD cho phần được truy cập thường xuyên
+- Lưu trữ toàn bộ mô hình trên HDD
+- Khi khởi động, sao chép vào bộ nhớ đệm
+
+```python
+import shutil
+import os
+
+# Đường dẫn mô hình trên HDD
+hdd_model_path = "/mnt/hdd/models/vietnamese_embedding"
+
+# Đường dẫn bộ nhớ đệm trên SSD
+ssd_cache_path = "/tmp/models/embedding"
+
+# Sao chép file quan trọng sang SSD khi khởi động
+os.makedirs(ssd_cache_path, exist_ok=True)
+for file in ["config.json", "modules.json", "1_Pooling/config.json", "pytorch_model.bin"]:
+    src = os.path.join(hdd_model_path, file)
+    dst = os.path.join(ssd_cache_path, file)
+    if os.path.exists(src):
+        os.makedirs(os.path.dirname(dst), exist_ok=True)
+        shutil.copy(src, dst)
+
+# Sử dụng mô hình từ bộ nhớ đệm
+model = SentenceTransformer(ssd_cache_path)
+```
+
+## LƯU Ý QUAN TRỌNG
+
+1. **Quản lý bộ nhớ GPU**: Nếu chạy cả LLM và mô hình embedding trên cùng GPU, hãy đặt thông số `max_memory` để kiểm soát bộ nhớ VRAM cho từng mô hình
+
+2. **Bộ nhớ đệm embeddings**: Cân nhắc lưu trữ và cache embeddings cho văn bản thường xuyên sử dụng để tránh tính toán lại
+
+3. **Lập lịch batch**: Với nguồn lực hạn chế, xử lý nhiều yêu cầu nhỏ cùng lúc hiệu quả hơn một yêu cầu lớn
+
+4. **Định lượng mô hình**: GGUF Q5_K_M đạt được sự cân bằng tốt giữa chất lượng và dung lượng bộ nhớ. Nếu RAM/VRAM hạn chế, hãy dùng Q4_K_M
+
+Với cấu hình máy được đề xuất, bạn có thể chạy cả Vietnamese_Embedding và mô hình LLM 3B một cách hiệu quả, đảm bảo phản hồi nhanh cho hệ thống RAG của mình.
